Fixed images and the quote not being aligned

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     
     
 }
-#hero {
+#Hero {
 font-size: 24px;
 }
 .main{
@@ -25,32 +25,50 @@ font-size: 24px;
     flex-wrap: wrap;
 }
 .image {
-    vertical-align:top;
+    vertical-align:bottom;
     max-width: 100%;
     max-height: 300px;
     margin: auto 0;
 }
 .header {
-display: inline-flex;
-text-align: center;
-justify-content: space-around;
-padding:20px;
-margin-left: 0;
-flex-grow: 1;
-background-color: #1f2937;
-
-width: 100%;
-color: white;
+    display: inline-flex;
+    text-align: center;
+    justify-content: space-around;
+    padding:20px;
+    margin-left: 0;
+    background-color: #1f2937;
+    width: 100%;
+    color: white;
 }
 
 .top_games {
+    padding: 10px 0 40px 0;
+    height: 450px;
     display: flex;
-    flex: 0;
-    text-align: center;
-color: #1f2937;
-font-size: 36px;
-font-weight: extra-bold;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 60px;
+    flex-wrap: wrap;
 }
+.information {
+    width: 200px;
+    height: 200px;
+    padding: 20px;
+
+}
+.top_images{
+    width: 180px;
+    height: auto;
+    border-radius: 10px;
+    border-color: #3882F6;
+    border-style: solid;
+}
+.top_description{
+    font-size: 18px;
+    text-align: center;
+    color: #1F2937;
+}
+
 .main {
  font-size: 18px;
 
@@ -63,14 +81,16 @@ font-weight: extra-bold;
 }
 
 .top_games {
-    display: inline-flex;
     color: #1f2937;  
     text-align: center;  
     gap: 10px;
     padding:2px;
     float: bottom;
     vertical-align: top;
-
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 60px;
 }
 
 button{
@@ -85,8 +105,19 @@ color:#1f2937
 .quote {
     background-color: #e5e7eb;
     font-size: 36px;
-    color: #1f2937
+    color: #1f2937;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 40px 0 70px;
+    height: 400px;
+    margin-top: 300px;
+    
 }
 h4 {
     font-size: 12px;
+}
+footer{
+    margin-top:auto;
+    
 }
